--- a/index.html
+++ b/index.html
@@ -50,13 +50,9 @@
             <div class="col-md-12">
               <h4 class="sub-heading">My Profile</h4>
               <h1 class="heading purple"><span class="purple">Amanda</span><br>Salima Nurul Azmi</h1>
-              <!-- Swiper -->
-              <div class="swiper-container client-swiper">
-                  <div class="swiper-slide client-box">
-                    <img src="assets/profile-pict.jpg" width="200">
-                    <p class="text-left tag"><br>607012300071<br>AMANDA SALIMA NURUL AZMI<br>D3 SISTEM INFORMASI</p>
-                  </div>              
-              </div>
+              <br>
+              <img src="assets/profile-pict.jpg" width="200">
+              <p class="text-right tag"><br>607012300071<br>AMANDA SALIMA NURUL AZMI<br>D3 SISTEM INFORMASI</p>              
             </div>
           </div>
         </div>
@@ -88,23 +84,23 @@
                     <img src="assets/switch.png">
                   </div>
                   <div class="swiper-slide testimonial-box blue">
-                    <h1>Modem</h1>
-                    <p>Modem adalah alat untuk menghubungkan ke internet. Modem mengubah sinyal digital dari komputer menjadi sinyal analog yang dapat ditransmisikan melalui kabel telepon atau kabel TV. Sebaliknya, modem juga mengubah sinyal analog yang diterima menjadi sinyal digital yang dapat diproses oleh komputer.</p>
-                    <img src="assets/modem.jpg">
-                  </div>
-                  <div class="swiper-slide testimonial-box pink">
-                    <h1>Hub</h1>
-                    <p>Hub pasif berfungsi sebagai pemisah atau pembagi jaringan,akan tetapi tidak melakukan penguatan signal sehingga ini tidak membutuhkan tenaga listrik tambahan untuk bisa bekerja.
-                      Hub aktif berfungsi sebagai penghubung jalur secara fsisik dan penguat signal dalam jaringan komputer,akan tetapi Hub aktif membutuhkan tenaga listrik tambahan untuk bisa bekerja.</p>
-                    <img src="assets/hub.jpg">
-                  </div>
-                  <div class="swiper-slide testimonial-box yellow">
                     <h1>Repeater</h1>
                     <p>Repeater memiliki fungsi untuk emperluas daya jangkau signal server,
                       Mengcover berbagai wilayah minim signal dari server,
                       Memudahkan akses signal WIFI,
                       Meneruskan dan memaksimalkan signal.</p>
                     <img src="assets/repeater.jpg">
+                  </div>
+                  <div class="swiper-slide testimonial-box pink">
+                    <h1>Hub</h1>
+                    <p>Hub pasif berfungsi sebagai pembagi jaringan,akan tetapi tidak melakukan penguatan signal.
+                      Hub aktif berfungsi sebagai penghubung jalur secara fisik dan penguat signal dalam jaringan komputer, dan membutuhkan tenaga listrik tambahan untuk bisa bekerja.</p>
+                    <img src="assets/hub.jpg">
+                  </div>
+                  <div class="swiper-slide testimonial-box yellow">
+                    <h1>Modem</h1>
+                    <p>Modem adalah alat untuk menghubungkan ke internet. Modem mengubah sinyal digital dari komputer menjadi sinyal analog yang dapat ditransmisikan melalui kabel telepon atau kabel TV. Sebaliknya, modem juga mengubah sinyal analog yang diterima menjadi sinyal digital yang dapat diproses oleh komputer.</p>
+                    <img src="assets/modem.jpg">
                   </div>
                   <div class="swiper-slide testimonial-box purple">
                     <h1>Bridge</h1>
@@ -114,7 +110,7 @@
                   <div class="swiper-slide testimonial-box blue">
                     <h1>Access Point</h1>
                     <p>Access point memungkinkan perangkat nirkabel untuk terhubung ke jaringan kabel. Ini sangat penting di lingkungan di mana mobilitas dan fleksibilitas menjadi kunci, seperti di perkantoran atau tempat umum.</p>
-                    <img src="assets/accescpoint.png">
+                    <img src="assets/accesspoint.png">
                   </div>
                   <div class="swiper-slide testimonial-box pink">
                     <h1>Network Interface Card (NIC)</h1>
