--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <h4 class="sub-heading">My Profile</h4>
               <h1 class="heading purple"><span class="purple">Amanda</span><br>Salima Nurul Azmi</h1>
               <br>
-              <img src="assets/profile-pict.jpg" width="200">
+              <img src="assets/pp.jpg" width="200">
               <p class="text-right tag"><br>607012300071<br>AMANDA SALIMA NURUL AZMI<br>D3 SISTEM INFORMASI</p>              
             </div>
           </div>
